@@ -1,3 +1,10 @@
+Mon Oct 15 19:48:47 UTC 2012  James H. Hill  <hillj at cs dot iupui dot edu>
+
+        * MDE/GME/paradigms/PICML/interpreter/CUTS_PICML/be/arch/ccm/opensplice/Traits.cpp:
+
+          BUGFIX: Placed the Windows-specific project settings within
+          the prop:windows scope.
+
 Sat Oct 13 21:20:48 UTC 2012  James H. Hill  <hillj at cs dot iupui dot edu>
 
         * cuts/iccm/arch/dds/servant/DDS_Publisher_T.cpp:
